# dongle-management

./: .gitignore  LICENSE  README.md  docker-compose.yml  manage  manage.ps1
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  categories.py  dashboard.py  dongles.py  import_routes.py  locations.py  pcs.py  serializers.py  test_modules.py
backend/app/core/: config.py  exceptions.py
backend/app/db/: base_models.py  session.py
backend/app/models/: __init__.py  category.py  category_test_module.py  dongle.py  dongle_test_module.py  location.py  mixins.py  pc.py  test_module.py
backend/app/schemas/: category.py  dashboard.py  dongle.py  import_schema.py  location.py  pc.py  test_module.py
backend/app/services/: category_service.py  dashboard_service.py  dongle_service.py  import_service.py  location_service.py  naming.py  pc_service.py  seed.py  test_module_service.py
backend/app/tests/: conftest.py  helpers.py  test_cascade_delete.py  test_category_modules.py  test_completeness_edge_cases.py  test_core_logic.py  test_dashboard_and_search.py  test_dongle_modules.py  test_entity_uniqueness.py  test_import_entities.py  test_import_parsing.py  test_naming.py  test_test_modules.py
backend/samples/: categories.csv  dongles.csv  pcs.csv  test_modules.csv
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  (+1 more)
(+12 files in other folders)
